aws_module/Jenkins-Server-Terraform/modules/networking/main.tf
/*==== The VPC ======*/
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = true

    tags = merge(local.common_tags, {
    Name        = "${var.project}-${var.environment}-vpc"
  })

}
