aws_module/Jenkins-Server-Terraform/modules/networking/subnet.tf
/* Public subnet */
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.public_subnets_cidr)
  cidr_block              = element(var.public_subnets_cidr, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = true

     tags = merge(local.common_tags, {
     Name        = "${var.project}-${element(var.availability_zones, count.index)}-public-subnet"
  })
}


/* Private subnet */
resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.private_subnets_cidr)
  cidr_block              = element(var.private_subnets_cidr, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = false

   tags = merge(local.common_tags, {
     Name        = "${var.project}-${element(var.availability_zones, count.index)}-private-subnet"
  })
}
